--- a/frontend-svelte/src/app.css
+++ b/frontend-svelte/src/app.css
@@ -1,3 +1,7 @@
 @import 'tailwindcss';
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
+
+@theme {
+  --font-serif: "Charmonman", serif;
+}
