--- a/frontend-svelte/src/app.css
+++ b/frontend-svelte/src/app.css
@@ -3,5 +3,15 @@
 @plugin '@tailwindcss/typography';
 
 @theme {
-  --font-serif: "Charmonman", serif;
+  --font-charmonman: "Charmonman", serif;
+  --font-serif: "Angsana New", serif;
+}
+
+@font-face {
+    font-family: 'Angsana New';
+    src: url('/AngsanaNew.woff2') format('woff2'),
+        url('/AngsanaNew.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
